force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Async_Operation_Result__c/sf_devops__Async_Operation_Result__c.object-meta.xml
<CustomObject>
    <description>Results of any of the asynchronous operations we perform, typically when interacting with the version control system.</description>
    <label>Async Operation Result</label>
    <nameField>
        <displayFormat>AOR-{000000}</displayFormat>
        <label>Async Operation Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Async Operation Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>