force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Async_Operation_Result__c/fields/sf_devops__Message__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Message__c</fullName>
    <description>If the operation is In Progress, then this will be a status message.  If the operation is in the Error status, then this is the error message.</description>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>