force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Async_Operation_Result__c/fields/sf_devops__Remote_Commands__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Remote_Commands__c</fullName>
    <description>The list of commands this async operation ran on the remote service</description>
    <label>Remote Commands</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>