force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Async_Operation_Result__c/fields/sf_devops__Status__c.field-meta.xml
<CustomField>
    <fullName>sf_devops__Status__c</fullName>
    <description>The status of this asynchronous operation.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Ignored</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>