force-app/main/default/_fdtlt82/Flex-Sandbox/objects/sf_devops__Async_Operation_Result__c/validationRules/sf_devops__Operation_No_Change.validationRule-meta.xml
<ValidationRule>
    <fullName>sf_devops__Operation_No_Change</fullName>
    <active>true</active>
    <description>Enforce the operation field cannot be changed.</description>
    <errorConditionFormula>ISCHANGED(sf_devops__Operation__c)</errorConditionFormula>
    <errorMessage>The Operation of an Async_Operation_Result cannot be changed.</errorMessage>
</ValidationRule>